--- a/googlehadoopin.yml
+++ b/googlehadoopin.yml
@@ -82,8 +82,8 @@
           $SPARK_HOME/bin/pyspark --packages databricks:spark-deep-learning:1.5.0-spark2.4-s_2.11
           }         
        backup: yes
-   - name: Editing hadoop-env.sh
-     
+       owner: suhailmsu21    
+   - name: Editing hadoop-env.sh 
      ansible.builtin.lineinfile:
        dest: /home/suhailmsu21/hadoop/etc/hadoop/hadoop-env.sh
        insertafter: EOF
