--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -49,11 +49,11 @@
    - name: make drill-on-yarn file
      raw: sudo touch /usr/local/apache-drill/conf/drill-on-yarn.conf
    - name: make copy files from DRILL HOME
-     raw: sudo cp $DRILL_HOME/conf/drilloverrideexample.conf $DRILL_SITE/drill-override.conf
+     raw: sudo cp /usr/local/apache-drill/conf/drilloverrideexample.conf $DRILL_SITE/drill-override.conf
    - name: make copy files from DRILL HOME
-     raw: sudo cp $DRILL_HOME/conf/drill-on-yarnexample.conf $DRILL_SITE/drill-on-yarn.conf
+     raw: sudo cp /usr/local/apache-drill/conf/drill-on-yarnexample.conf $DRILL_SITE/drill-on-yarn.conf
    - name: make copy files from DRILL HOME
-     raw: sudo cp $DRILL_HOME/conf/drillenv.sh $DRILL_SITE     
+     raw: sudo cp /usr/local/apache-drill/conf/drillenv.sh $DRILL_SITE     
    - name: Editing drill-override.conf
      
      ansible.builtin.blockinfile:
