--- a/googlehadoopin.yml
+++ b/googlehadoopin.yml
@@ -1,14 +1,14 @@
 - hosts: google_*
   become: yes
   pre_tasks:
-   - name: Run the equivalent of "apt-get update" as a separate step
-     apt:
-       update_cache: yes
+#   - name: Run the equivalent of "apt-get update" as a separate step
+#     apt:
+#       update_cache: yes
 
-   - name: Installing java apt
-     apt:
-       name: openjdk-8-jdk-headless
-       state: present   
+#   - name: Installing java apt
+#     apt:
+#       name: openjdk-8-jdk-headless
+#       state: present   
    - name: Get apache hadoop
      get_url: 
        url: https://archive.apache.org/dist/hadoop/common/hadoop-3.1.1/hadoop-3.1.1.tar.gz
@@ -48,41 +48,7 @@
 #       src: /etc/hosts
 #       dest: /etc/hosts
 
-   - name: Editing Bash File
-     
-     ansible.builtin.blockinfile:
-       dest: .bashrc
-       insertafter: EOF
-       block: |
-         export HADOOP_HOME=/usr/local/hadoop
-         export PATH=$PATH:$HADOOP_HOME/bin
-         export PATH=$PATH:$HADOOP_HOME/sbin
-         export HADOOP_MAPRED_HOME=${HADOOP_HOME}
-         export HADOOP_COMMON_HOME=${HADOOP_HOME}
-         export HADOOP_HDFS_HOME=${HADOOP_HOME}
-         export YARN_HOME=${HADOOP_HOME}
-         export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
-         export SPARK_HOME=/usr/local/spark
-         export PYSPARK_PYTHON=python3
-         export PATH=$PATH:$SPARK_HOME/bin
-         export LD_LIBRARY_PATH=$HADOOP_HOME/lib/native:$LD_LIBRARY_PATH
-         export PYTHONPATH=$SPARK_HOME/python:$SPARK_HOME/python/build:$PYTHONPATH
-         export ZOO_HOME=/usr/local/zookeeper
-         export PATH=$ZOO_HOME/bin:$PATH
-         export MASTER_DIR=/usr/local/apache-drill
-         export DRILL_SITE=/etc/drill-site
-         export DRILL_NAME=apache-drill
-         export DRILL_HOME=/usr/local/$DRILL_NAME
-          function sparknotebook()
-          {
-          export PYSPARK_PYTHON=python3
-          export SPARK_HOME=/usr/local/spark
-          export PYSPARK_DRIVER_PYTHON=jupyter
-          export PYSPARK_DRIVER_PYTHON_OPTS="notebook"
-          $SPARK_HOME/bin/pyspark --packages databricks:spark-deep-learning:1.5.0-spark2.4-s_2.11
-          }         
-       backup: yes
-       owner: suhailmsu21    
+
    - name: Editing hadoop-env.sh 
      ansible.builtin.lineinfile:
        dest: /home/suhailmsu21/hadoop/etc/hadoop/hadoop-env.sh
@@ -204,26 +170,26 @@
      raw: mv hadoop /usr/local/hadoop
 
 
-- hosts: google_1
-  become: yes
-  tasks:
-   - name: Changing permissions of the key
-     copy:
-       src: /gcp.pem
-       dest: /home/suhailmsu21/
-       mode: '400'
-       owner: suhailmsu21
-   - name: Installing jupyter notebook
-     apt:
-       name: jupyter-notebook
-       state: present
-   - name: Installing pip
-     apt:
-       name: python3-pip
-       state: present
-- hosts: google_1
-  become_user: suhailmsu21
-  tasks:
-   - name: Installing pip
-     pip:
-       name: findspark
+#- hosts: google_*
+#  become: yes
+#  tasks:
+#   - name: Changing permissions of the key
+#     copy:
+#       src: /gcp.pem
+#       dest: /home/suhailmsu21/
+#       mode: '400'
+#       owner: suhailmsu21
+#   - name: Installing jupyter notebook
+#     apt:
+#       name: jupyter-notebook
+#       state: present
+#   - name: Installing pip
+#     apt:
+#       name: python3-pip
+#       state: present
+#- hosts: google_1
+#  become_user: suhailmsu21
+#  tasks:
+#   - name: Installing pip
+#     pip:
+#       name: findspark
