--- a/googleyarn.yml
+++ b/googleyarn.yml
@@ -1,5 +1,5 @@
 - hosts: google-*
-  become_user: suhailmsu21
+  become:yes
   tasks:
    - name: Editing mapred.xml File 
      ansible.builtin.blockinfile:
@@ -81,9 +81,8 @@
        owner: suhailmsu21
    - name: Editing core.xml File
      ansible.builtin.blockinfile:
-       dest: /home/suhailmsu21/hadoop/etc/hadoop/core-site.xml
-       marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
-       insertafter: "<configuration>"
+       dest: .bashrc
+       insertafter: EOF
        block: |
          export HADOOP_HOME=/usr/local/hadoop
          export PATH=$PATH:$HADOOP_HOME/bin
