--- a/apachedrill1-19.yml
+++ b/apachedrill1-19.yml
@@ -1,3 +1,6 @@
+- hosts: google_1
+  become: yes
+  tasks:
    - name: Get apache zookeeper
      unarchive: 
        src: https://dlcdn.apache.org/drill/drill-1.19.0/apache-drill-1.19.0.tar.gz
