--- a/googleconfhadoop.yml
+++ b/googleconfhadoop.yml
@@ -1,4 +1,4 @@
-- hosts: google-*
+- hosts: google-4
   become_user: suhailmsu21
   tasks:
    - name: Editing core.xml File
@@ -109,6 +109,7 @@
        block: |
          10.128.0.4
          10.128.0.6
+         10.128.0.8
        backup: yes
        owner: suhailmsu21
 
