--- a/googlehadoopin.yml
+++ b/googlehadoopin.yml
@@ -25,7 +25,7 @@
      raw: rm -r -f /home/suhailmsu21/hadoop
    - name: Editing core.xml File
      ansible.builtin.blockinfile:
-       dest: /home/suhailmsu21/hadoop/etc/hadoop/core-site.xml
+       dest: .bashrc
        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
        insertafter: "<configuration>"
        block: |
