--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -6,6 +6,7 @@
        src: https://archive.apache.org/dist/zookeeper/zookeeper-3.5.8/apache-zookeeper-3.5.8-bin.tar.gz
        dest: /home/suhailmsu21
        backup: yes
+       remote_src: yes
        owner: suhailmsu21        
    - name: Installing java apt
      apt:
