--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -32,7 +32,8 @@
          server.1=google-1:2888:3888
          server.2=google-2:2888:3888
          server.3=google-3:2888:3888
-         server.4=google-4:2888:3888
+         server.4=amazon-3:2888:3888
+         server.5=amazon-2:2888:3888
        backup: yes
        owner: suhailmsu21 
    - name: Creating myid file
