--- a/configure-url.yml
+++ b/configure-url.yml
@@ -10,7 +10,7 @@
        block: |
          <property>
          <name>fs.defaultFS</name>
-         <value>hdfs://ec2-52-90-51-230.compute-1.amazonaws.com:9000</value>
+         <value>hdfs://google-1:9000</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -24,7 +24,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>ec2-52-90-51-230.compute-1.amazonaws.com:54311</value>
+         <value>google-1:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -77,7 +77,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>ec2-52-90-51-230.compute-1.amazonaws.com</value>
+         <value>google-1</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -97,7 +97,7 @@
        dest: /usr/local/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         ec2-52-90-51-230.compute-1.amazonaws.com
+         google-1
        backup: yes
        owner: ubuntu
 
@@ -107,11 +107,15 @@
        dest: /usr/local/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         ec2-44-202-20-34.compute-1.amazonaws.com
+         google-1
+         google-2
+         google-3
+         amazon-3
+         amazon-2
        backup: yes
        owner: ubuntu
 
-- hosts: amazon_*
+- hosts: amazon-*
   become: yes
   tasks: 
    - name: Rebooting Machines
