--- a/googleconfhadoop.yml
+++ b/googleconfhadoop.yml
@@ -10,7 +10,7 @@
        block: |
          <property>
          <name>fs.defaultFS</name>
-         <value>hdfs://google-1:9000</value>
+         <value>hdfs://10.128.0.9:9000</value>
          </property>
        backup: yes
        owner: suhailmsu21
@@ -24,7 +24,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>google-1:54311</value>
+         <value>10.128.0.9:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -77,7 +77,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>google-1</value>
+         <value>10.128.0.9</value>
          </property>
        backup: yes
        owner: suhailmsu21
@@ -97,7 +97,7 @@
        dest: /usr/local/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         google-1
+         10.128.0.9
        backup: yes
        owner: suhailmsu21
 
@@ -107,10 +107,9 @@
        dest: /usr/local/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         google-2
-         google-3
-         amazon-3
-         amazon-2
+         10.128.0.8
+         10.128.0.12
+         10.128.0.11
        backup: yes
        owner: suhailmsu21
 
