--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -32,8 +32,7 @@
          server.1=google-1:2888:3888
          server.2=google-2:2888:3888
          server.3=google-3:2888:3888
-         server.4=amazon-3:2888:3888
-         server.5=amazon-2:2888:3888
+         server.4=google-4:2888:3888
        backup: yes
        owner: suhailmsu21 
    - name: Creating myid file
@@ -57,15 +56,10 @@
          server.1=google-1:2888:3888
          server.2=google-2:2888:3888
          server.3=google-3:2888:3888
-         server.4=amazon-3:2888:3888
-         server.5=amazon-2:2888:3888
+         server.4=google-4:2888:3888
        backup: yes
-       owner: ubuntu  
-   - name: Remove /usr/share/zookeeper
-     raw: rm -r -f  /usr/share/zookeeper
-   - name: Moving zookeeper to zookeeper
-     raw: mv zookeeper /usr/share/zookeeper
- 
+       owner: suhailmsu21
+
    
 - hosts: google-3
   become: yes
@@ -83,7 +77,7 @@
        block: |
          3
        backup: yes
-       owner: ubuntu
+       owner: suhailmsu21
 - hosts: google-2
   become: yes
   tasks:
@@ -100,7 +94,7 @@
        block: |
          2
        backup: yes
-       owner: ubuntu
+       owner: suhailmsu21
 - hosts: google-1
   become: yes
   tasks:
@@ -110,15 +104,31 @@
        block: |
          1
        backup: yes
-       owner: ubuntu
+       owner: suhailmsu21
    - name: Editing MYID file
      ansible.builtin.blockinfile:
        dest: /etc/zookeeper/conf/myid
        block: |
          1
        backup: yes
-       owner: ubuntu
-
+       owner: suhailmsu21
+- hosts: google-4
+  become: yes
+  tasks:
+   - name: Editing MYID file
+     ansible.builtin.blockinfile:
+       dest: /etc/zookeeper/data/myid
+       block: |
+         4
+       backup: yes
+       owner: suhailmsu21
+   - name: Editing MYID file
+     ansible.builtin.blockinfile:
+       dest: /etc/zookeeper/conf/myid
+       block: |
+         4
+       backup: yes
+       owner: suhailmsu21
 #- hosts: google-1
  # become: yes
   #tasks:
