--- a/upgrade-yarn.yml
+++ b/upgrade-yarn.yml
@@ -9,7 +9,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>google-1:54311</value>
+         <value>amazon-1:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -59,19 +59,19 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>google-1</value>
+         <value>amazon-1</value>
          </property>
          <property>         
          <name>yarn.nodemanager.resource.memory-mb</name>
-         <value>10240</value>
+         <value>3072</value>
          </property>
          <property>
          <name>yarn.scheduler.maximum-allocation-mb</name>
-         <value>10240</value>
+         <value>2048</value>
          </property>
          <property>
          <name>yarn.scheduler.minimum-allocation-mb</name>
-         <value>2048</value>
+         <value>512</value>
          </property>
          <property>
          <name>yarn.nodemanager.vmem-check-enabled</name>
